Fixed all the things in the note